Fix align issue on portfolio dropdown.

--- a/css/style.css
+++ b/css/style.css
@@ -15653,7 +15653,7 @@ body.advanced .fancybox-bg {
 
 .portfolio-drop {
   position: absolute;
-  top: 7px;
+  top: 14px;
   left: 10px;
   width: auto;
   height: 30px;
