--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -82,7 +82,7 @@ body.advanced .fancybox-bg{
 
 .portfolio-drop{
 	position: absolute;
-	top: 7px;
+	top: 14px;
 	left: 10px;
 	width: auto;
 	height: 30px;
